# action-tools

./: Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/action_tools/: __init__.py  cli.py  gendocs.py  github.py  models.py  usage.py
src/action_tools/templates/: action_readme.md.jinja2
tests/: test_gendocs.py  test_github.py  test_usage.py
tests/__fixtures__/: EXPECTED.md
tests/gendocs/: test_gendocs.py  test_models.py
tests/gendocs/__fixtures__/: EXPECTED.md  action.yml
