[project]
name = "action-tools"
version = "0.1.0"
description = "A CLI for common tasks when working on Github Actions and reusable workflows"
readme = "README.md"
authors = [
    { name = "Graham Beckley", email = "gbeckley@mozilla.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "ruamel-yaml>=0.18.14",
]

[project.scripts]
action-tools = "action_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.4",
]

[tool.ruff.lint]
extend-select = ["I", "PT"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
